// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Algolia template handles route item 1`] = `
<DocumentFragment>
  <a
    class="aa-ItemLink"
    href="/schedules/111"
  >
    <div
      class="aa-ItemContent mt-1"
    >
      <div
        class="flex-grow"
      >
        <div
          class="flex items-baseline gap-1"
        >
          <span
            class="basis-4 flex-shrink-0"
          />
          <div
            class="aa-ItemContentTitle flex-grow font-normal"
          >
            <span />
             
            <span
              class="text-nowrap text-gray-500 text-sm font-normal notranslate"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Location template renders 1`] = `
<DocumentFragment>
  <a
    class="aa-ItemLink"
    href="/transit-near-me?latitude=42.352271&longitude=-71.055242&address=South+Station,+Boston,+MA"
  >
    <div
      class="aa-ItemContent"
    >
      <div
        class="flex items-baseline gap-1"
      >
        <span
          aria-hidden="true"
          class="fa fa-fw fa-map-marker basis-4 flex-shrink-0"
        />
        <span
          class="aa-ItemContentTitle flex-grow"
        >
          123 Main St
        </span>
      </div>
      <div
        class="text-nowrap flex-grow-0 text-gray-500 text-sm font-normal"
      >
        Town, MA
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Popular template renders 1`] = `
<DocumentFragment>
  <a
    class="aa-ItemLink"
    href="/transit-near-me?latitude=42.352271&longitude=-71.055242&name=South+Station"
  >
    <div
      class="aa-ItemContent"
    >
      <div
        class="flex-grow mt-1"
      >
        <div
          class="flex items-baseline flex-grow"
        >
          <div
            class="basis-6"
          />
          <strong
            class="aa-ItemContentTitle notranslate"
          >
            South Station
          </strong>
        </div>
        <div
          class="flex gap-1 mt-2 mb-1"
        >
          <span
            class="c-search-result__feature-icons"
          />
          <span
            class="c-search-result__feature-icons"
          />
          <span
            class="c-search-result__feature-icons"
          />
          <span
            class="c-search-result__feature-icons"
          >
            <span
              class="c-icon__cr-zone"
            >
              Zone 1A
            </span>
          </span>
        </div>
      </div>
      <div
        class="text-nowrap text-gray-500 text-sm font-normal"
      >
        Town, MA
      </div>
    </div>
  </a>
</DocumentFragment>
`;
